--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action=" " method=" ">
+		<label for="name">Name</label><br>
+		<input name="name" id="name" type="text" placeholder="Name"><br>
+		<label for="phone">Phone Number</label><br>
+		<input name="contact_no" id="phone" type="text" placeholder="Phone Number"><br>
+		<label for="address">Address</label><br>
+		<input name="address" id="address" type="text" placeholder="Address"><br>
+		
+		<input name="check" value="Have you ever lived with a Dog before?" id="checkbox" type="checkbox">
+		<label for="checkbox">Have you ever lived with a Dog before?</label><br>
+
+		<label for="multiSelect">Please select your preferred breeds </label>
+		<select id="multiSelect" type="select" multiple >
+		<option >libra</option>
+		
+		<option>beagle</option>
+		<option>catoper</option>
+		</select> 
+<br>
+		<input name="submit" type="Submit" value="Submit">
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
