--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action=" " method=" ">
+	<form>
 		<label for="name">Name</label><br>
 		<input name="name" id="name" type="text" placeholder="Name"><br>
 		<label for="phone">Phone Number</label><br>
@@ -20,14 +20,14 @@
 		<label for="checkbox">Have you ever lived with a Dog before?</label><br>
 
 		<label for="multiSelect">Please select your preferred breeds </label>
-		<select id="multiSelect" type="select" multiple >
-		<option >libra</option>
+		<select id="multiSelect" type="select" multiple>
+		<option>libra</option>
 		
 		<option>beagle</option>
 		<option>catoper</option>
 		</select> 
 <br>
-		<input name="submit" type="Submit" value="Submit">
+		<input id="submit" name="submit" type="Submit" value="Submit">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
