--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 		<option>catoper</option>
 		</select> 
 <br>
-		<input  name="submit" type="submit" value="Submit">
+		<input id="sub" name="submit" type="submit" value="Submit">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
